# autopark

./: db.sqlite3  manage.py  pyproject.toml
auto_park/: asgi.py  settings.py  urls.py  wsgi.py
catalog/: admin.py  choices.py  models.py  permissions.py  serializers.py  views.py
catalog/migrations/: 0001_initial.py
catalog/templates/: test.html
tests/: test_autopark.py
